--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -35,7 +35,8 @@
     "src"
   ],
   "scripts": {
-    "build": "microbundle --raw --no-compress"
+    "build": "microbundle --raw --no-compress",
+    "watch": "microbundle -w --raw --no-compress"
   },
   "dependencies": {
     "@babel/helper-module-imports": "^7.22.5",
