--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,9 +36,9 @@
     "@types/react": "^18.2.28",
     "markdown-magic": "^2.6.1",
     "microbundle": "^0.15.1",
+    "prettier": "^3.0.3",
     "rimraf": "^3.0.2",
-    "typescript": "5.2.2",
-    "prettier": "^3.0.3"
+    "typescript": "5.2.2"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6"
 }
