--- a/packages/schemas-mui/package.json
+++ b/packages/schemas-mui/package.json
@@ -24,8 +24,8 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "workspace:^3.0.0-dev.112",
-    "@react-typed-forms/mui": "workspace:^3.0.0-dev.112",
+    "@react-typed-forms/core": "workspace:^3.0.0-dev.113",
+    "@react-typed-forms/mui": "workspace:^3.0.0-dev.113",
     "@react-typed-forms/schemas": "workspace:^1.0.0-dev.17",
     "@react-typed-forms/transform": "workspace:^0.1.0",
     "date-fns": "^2.29.3",
@@ -48,6 +48,6 @@
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
   "scripts": {
     "build": "rimraf ./lib/ && microbundle -f cjs --no-compress --jsx React.createElement --jsxFragment React.Fragment",
-    "watch": "rimraf ./lib/ && microbundle -w -f cjs --no-compress --jsx React.createElement --jsxFragment React.Fragment"
+    "watch": "microbundle -w -f cjs --no-compress --jsx React.createElement --jsxFragment React.Fragment"
   }
 }
