--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@react-typed-forms/core": "workspace:^3.0.0-dev.114",
     "react": "^18.2.0",
+    "jsonata": "^1.8.6",
     "clsx": "^1 || ^2" 
   },
   "devDependencies": {
