--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@react-typed-forms/core",
-  "version": "3.0.0-dev.114",
+  "version": "3.0.0-dev.115",
   "description": "",
   "source": "src/index.ts",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "rimraf lib/ && microbundle -f cjs --raw --no-compress --jsx React.createElement --jsxFragment React.Fragment",
-    "watch": "tsc -w",
+    "watch": "microbundle -w -f cjs --no-compress --jsx React.createElement --jsxFragment React.Fragment",
     "update-readme": "md-magic --path README.md --path ../../README.md"
   },
   "repository": {
