--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -32,12 +32,12 @@
   "devDependencies": {
     "@react-typed-forms/transform": "workspace:^0.1.0",
     "@types/react": "^18.2.28",
+    "markdown-magic": "^2.6.1",
     "microbundle": "^0.15.1",
     "nswag": "^13.18.2",
     "prettier": "^3.0.3",
     "rimraf": "^3.0.2",
-    "typescript": "^5.2.2",
-    "markdown-magic": "^2.6.1"
+    "typescript": "^5.2.2"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
   "scripts": {
