--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -31,6 +31,7 @@
     "@mui/material": "^5.14.13",
     "@emotion/styled": "^11.11.0",
     "@emotion/react": "^11.11.1",
+    "jsonata": "^2.0.4",
     "@react-typed-forms/core": "workspace:^3.0.0-dev.117",
     "@react-typed-forms/mui": "workspace:^3.0.1-dev.1",
     "@react-typed-forms/schemas": "workspace:^1.0.0-dev.24",
