--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "13.5.5",
+    "next": "^14.1.4",
     "@next/mdx": "^13.5.5",
     "@mdx-js/loader": "^2.3.0",
     "raw-loader": "~4.0.2",
