--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -35,7 +35,7 @@
     "clsx": "^1 || ^2",
     "@react-typed-forms/core": "workspace:^3.0.0-dev.117",
     "@react-typed-forms/mui": "workspace:^3.0.1-dev.1",
-    "@react-typed-forms/schemas": "workspace:^1.0.0-dev.24",
+    "@react-typed-forms/schemas": "workspace:^5.0.0",
     "@react-typed-forms/schemas-mui": "workspace:^3.0.1-dev.1"
   },
   "devDependencies": {
