--- a/packages/schemas-mui/package.json
+++ b/packages/schemas-mui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/schemas-mui",
-  "version": "3.0.1-dev.1",
+  "version": "3.1.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@react-typed-forms/core": "workspace:^3.0.0-dev.117",
     "@react-typed-forms/mui": "workspace:^3.0.1-dev.1",
-    "@react-typed-forms/schemas": "workspace:^1.0.0-dev.24",
+    "@react-typed-forms/schemas": "workspace:^5.0.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0"
   },
