--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -11,13 +11,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "clsx": "^2.0.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@react-typed-forms/core": "^3.0.0-dev.114",
-    "@react-typed-forms/schemas": "^1.0.0-dev.12",
+    "@react-typed-forms/core": "^3.0.0-dev.117",
+    "@react-typed-forms/schemas": "^5.0.0",
     "@react-typed-forms/mui": "^3.0.1-dev.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
