--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/core",
-  "version": "3.0.0-dev.118",
+  "version": "3.0.0",
   "description": "",
   "source": "src/index.ts",
   "main": "lib/index.js",
