--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@react-typed-forms/transform": "workspace:^0.2.0",
+    "@react-typed-forms/transform": "^0.2.0",
     "@types/react": "^18.2.28",
     "markdown-magic": "^2.6.1",
     "microbundle": "^0.15.1",
