--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/core",
-  "version": "3.5.3",
+  "version": "3.6.0",
   "description": "",
   "source": "src/index.ts",
   "main": "lib/index.js",
@@ -33,7 +33,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@react-typed-forms/transform": "^0.2.0",
+    "@react-typed-forms/transform": "workspace:^0.2.0",
     "@types/react": "^18.2.28",
     "markdown-magic": "^2.6.1",
     "microbundle": "^0.15.1",
