--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@react-typed-forms/mui",
-	"version": "3.0.2",
+	"version": "3.0.3",
 	"description": "",
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
@@ -23,11 +23,9 @@
 		"forms",
 		"material-ui"
 	],
-	"dependencies": {
-		"@mui/material": "^5.14.13",
-		"@react-typed-forms/core": "workspace:^3.0.0"
-	},
 	"peerDependencies": {
+		"@mui/material": "^5.14.13",
+		"@react-typed-forms/core": "workspace:^3.0.0",
 		"react": "18.x",
 		"react-dom": "18.x"
 	},
