--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -31,6 +31,8 @@
 	},
 	"devDependencies": {
 		"@react-typed-forms/transform": "workspace:^0.2.0",
+		"@mui/material": "^5.14.13",
+		"@react-typed-forms/core": "workspace:^3.0.0",
 		"@types/react": "^18.2.28",
 		"microbundle": "^0.15.1",
 		"react": "^18.2.0",
