--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@react-typed-forms/mui",
-	"version": "3.0.3",
+	"version": "3.0.4",
 	"description": "",
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
@@ -25,9 +25,8 @@
 	],
 	"peerDependencies": {
 		"@mui/material": "^5.14.13",
-		"@react-typed-forms/core": "workspace:^3.0.0",
-		"react": "18.x",
-		"react-dom": "18.x"
+		"@react-typed-forms/core": "workspace:^3.6.1",
+		"react": "^18"
 	},
 	"devDependencies": {
 		"@react-typed-forms/transform": "workspace:^0.2.0",
