--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,7 @@
   "name": "@react-typed-forms/core",
   "version": "3.6.3",
   "description": "",
+  "type": "module",
   "source": "src/index.ts",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,6 +10,7 @@
     "prepack": "npm run build",
     "build": "rimraf lib/ && microbundle -f cjs --raw --no-compress --jsx React.createElement --jsxFragment React.Fragment",
     "watch": "microbundle -w -f cjs --no-compress --jsx React.createElement --jsxFragment React.Fragment",
+    "test": "jest --coverage",
     "update-readme": "md-magic --path README.md --path ../../README.md"
   },
   "repository": {
@@ -40,7 +42,11 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "ts-jest": "^29.2.5",
+    "jest": "^29.7.0",
+    "tsx": "^4.19.1",
+    "@jest/globals": "^29.7.0"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6"
 }
