--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -116,7 +116,7 @@
     "react-dnd": "16.0.1",
     "@react-typed-forms/core": "workspace:*",
     "@react-typed-forms/mui": "workspace:*",
-    "@react-typed-forms/schemas": "^13.5.3",
+    "@react-typed-forms/schemas": "workspace:^13.5.3",
     "@react-typed-forms/schemas-mui": "workspace:*"
   },
   
